--- a/style.css
+++ b/style.css
@@ -1,1 +1,38 @@
 @import "tailwindcss";
+/* --- FOOTER GLOBAL --- */
+.footer-logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  margin: 0px;
+}
+.footer { 
+  background-color: #668eab;
+  color: #0f172a;
+  padding: 50px 20px;
+  font-family: "Arial", sans-serif;
+
+  }
+
+  .footer-top {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+  }
+
+  .footer-socials ul {
+    display: center;
+    list-style: none;
+    padding: 0;
+  }
+
+  .footer-contact p {
+    margin: 5px 0;
+  }
+  
+  .footer-bottom {
+    border-top: 1px ;
+    padding-top: 20px;
+    text-align: center;
+  }
